museum: fix views, audio exhibits, museum map, 119 exhibits, static fallback for GitHub Pages

--- a/exhibits/requiem-for-drift/index.html
+++ b/exhibits/requiem-for-drift/index.html
@@ -115,6 +115,10 @@
     
     <div class="audio-container">
         <p>Audio file: <code>requiem_for_drift.wav</code></p>
+        <audio controls style="width: 100%; max-width: 600px; margin: 15px 0;">
+            <source src="requiem_for_drift.wav" type="audio/wav">
+            Your browser does not support the audio element.
+        </audio>
         <p><em>Six geological movements, each deeper and quieter than the last.</em></p>
         <p><em>Duration: ~2 minutes • The time it takes to excavate memory</em></p>
     </div>
